correct z-index for menu (bug in relation with centre button)

--- a/style/style2_LS.css
+++ b/style/style2_LS.css
@@ -77,7 +77,7 @@
     font-weight: 700;
     color: #ffffff;
     text-align: center;
-    z-index: 102;
+    z-index: 1102;
     opacity: 0.8;
     border-left: white 2px solid;
     border-bottom: white 2px solid;
